--- a/templates/contact.html
+++ b/templates/contact.html
@@ -34,7 +34,7 @@
                         <div class="method-icon">📞</div>
                         <div class="method-details">
                             <h3>โทรหาเรา</h3>
-                            <p>+1 (555) 123-4567</p>
+                            <p>0980352350</p>
                         </div>
                     </div>
                     
@@ -42,7 +42,7 @@
                         <div class="method-icon">✉️</div>
                         <div class="method-details">
                             <h3>อีเมลถึงเรา</h3>
-                            <p>info@lumaid.ai</p>
+                            <p>contact@lu-maid.com</p>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="social-icons">
                         <a href="#" class="social-icon">LinkedIn</a>
                         <a href="#" class="social-icon">Twitter</a>
-                        <a href="#" class="social-icon">Facebook</a>
+                        <a href="https://www.facebook.com/profile.php?id=61575112637341" class="social-icon">Facebook</a>
                     </div>
                 </div>
                 {% else %}
@@ -72,7 +72,7 @@
                         <div class="method-icon">📞</div>
                         <div class="method-details">
                             <h3>Call Us</h3>
-                            <p>+1 (555) 123-4567</p>
+                            <p>+66 980352350</p>
                         </div>
                     </div>
                     
@@ -80,7 +80,7 @@
                         <div class="method-icon">✉️</div>
                         <div class="method-details">
                             <h3>Email Us</h3>
-                            <p>info@lumaid.ai</p>
+                            <p>contact@lu-maid.com</p>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     <div class="social-icons">
                         <a href="#" class="social-icon">LinkedIn</a>
                         <a href="#" class="social-icon">Twitter</a>
-                        <a href="#" class="social-icon">Facebook</a>
+                        <a href="https://www.facebook.com/profile.php?id=61575112637341" class="social-icon">Facebook</a>
                     </div>
                 </div>
                 {% endif %}
