--- a/templates/layout.html
+++ b/templates/layout.html
@@ -108,9 +108,11 @@
                             {% if lang == 'th' %}
                             <li><a href="/privacy">นโยบายความเป็นส่วนตัว</a></li>
                             <li><a href="/terms">เงื่อนไขการใช้บริการ</a></li>
+                            <li><a href="/data-deletion">คำแนะนำการลบข้อมูล</a></li>
                             {% else %}
                             <li><a href="/privacy">Privacy Policy</a></li>
                             <li><a href="/terms">Terms of Service</a></li>
+                            <li><a href="/data-deletion">Data Deletion Instructions</a></li>
                             {% endif %}
                         </ul>
                     </div>
