--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -12,9 +12,9 @@
         </h1>
         <p>
             {% if lang == 'th' %}
-            วันที่มีผลบังคับใช้: {{ moment().format('DD MMMM YYYY') }}
+            วันที่มีผลบังคับใช้: 1 มกราคม 2025
             {% else %}
-            Effective Date: {{ moment().format('MMMM DD, YYYY') }}
+            Effective Date: January 1, 2025
             {% endif %}
         </p>
     </div>
